--- a/sub5.html
+++ b/sub5.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>페이지5</title>
     <link rel="stylesheet" href="stylesub5.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <nav>
