--- a/sub5.html
+++ b/sub5.html
@@ -26,4 +26,8 @@
     </section>
     <footer>Copyright 2023. Raf Simons. All Rights Reserved.</footer>
 </body>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </html>
