--- a/sub5.html
+++ b/sub5.html
@@ -17,11 +17,11 @@
         </ul>
     </nav>
     <section>
-        <div class="text1"><b>Raf Simons</b>’s First Collection <b>1995AW</b></div>
+        <div data-aos="fade-up" class="text1"><b>Raf Simons</b>’s First Collection <b>1995AW</b></div>
         <div class="video1"><iframe width="960" height="540" src="https://www.youtube.com/embed/lx9rRZYshK4?si=8nB4ZvbcCV03CyCD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-        <div class="text2"><b>Raf Simons</b> 2001AW <b>"Riot! Riot! Riot!"</b></div>
+        <div data-aos="fade-up" class="text2"><b>Raf Simons</b> 2001AW <b>"Riot! Riot! Riot!"</b></div>
         <div class="video2"><iframe width="960" height="540" src="https://www.youtube.com/embed/oXsQ4NMQ6B8?si=xEKzHrosENUftzzk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-        <div class="text3">Official Video '<b>RAF</b>’ by <b>A$AP Mob</b> (feat. A$AP Rocky, Playboi Carti, Quavo, Lil Uzi Vert & Frank Ocean)</div>
+        <div data-aos="fade-up" class="text3">Official Video '<b>RAF</b>’ by <b>A$AP Mob</b> (feat. A$AP Rocky, Playboi Carti, Quavo, Lil Uzi Vert & Frank Ocean)</div>
         <div class="video3"><iframe width="960" height="540" src="https://www.youtube.com/embed/_eLryuBCO-M?si=xLN9A1541i8zcXdL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
     </section>
     <footer>Copyright 2023. Raf Simons. All Rights Reserved.</footer>
