--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/icon.png" type="image/x-icon">
+    <meta property="og:url" content="https://parkgoeun1.github.io/web2/">
+    <meta property="og:title" content="index">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://parkgoeun1.github.io/ogimage.png">
+    <meta property="og:description" content="세부 텍스트 정보">
 </head>
 <body>
     <nav>
