--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/icon.png" type="image/x-icon">
     <meta property="og:url" content="https://parkgoeun1.github.io/web2/">
-    <meta property="og:title" content="index">
+    <meta property="og:title" content="RAF SIMONS">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://parkgoeun1.github.io/ogimage.png">
-    <meta property="og:description" content="세부 텍스트 정보">
+    <meta property="og:description" content="raf simons의 모든 것">
 </head>
 <body>
     <nav>
